# rmq_service

./: .gitignore  README.md  pyproject.toml
src/rmq_service/: __init__.py  consume_service.py  produce_service.py  schemas.py
tests/: conftest.py
tests/unit/: test_consume_service.py  test_produce.py
